[package]
name = "network-test-util"
version = "0.1.0"
authors = ["Ivan Schuetz <ivanschuetz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algonaut = { git = "https://github.com/manuelmauro/algonaut", branch = "main", features = ["rustls"], default-features = false }
# algonaut = { path = "../../algonaut", features = ["rustls"], default-features = false }
mbase = { path = "../mbase" } # NOTE: for now, enable this when pushing. third parties don't have api project, only mbase.
# mbase = { path = "../api/mbase" }
anyhow = "1.0"
tokio = { version = "1.6.0", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
log = "0.4"
chrono = { version = "0.4.19", features = ["serde"] }
rust_decimal = "1.15"
